--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.11",
     "create-next-app": "^13.3.1",
     "next": "^13.3.1",
+    "next-images": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
